--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -1,10 +1,10 @@
 {
     "name": "datahub",
     "version": "1.0.0",
-    "main": "app.js",
+    "main": "server.js",
     "type": "module",
     "scripts": {
-        "dev": "node app.js",
+        "dev": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
