--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #=-=-=-=--==-=-=-=--==-=-=-=--==-=-=-=BACKEND--==-=-=-=--==-=-=-=--==-=-=-=--==-=-=-=--=
 
 #====== DATABASE =========
-DATABASE_URL="mysql://root:rootpassword@localhost:3306/bee_fleet_management"
+DATABASE_URL="mysql://root:rootpassword@bee_fleet_management:3306/bee_fleet_management"
 MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=bee_fleet_management
 MYSQL_USER=beefleetuser
@@ -10,7 +10,7 @@ PMA_HOST=mysql
 PMA_PORT=3306
 
 #======Datahub =========
-PORT_DATAHUB=3000
+PORT_DATAHUB=3001
 
 
 #=-=-=-=--==-=-=-=--==-=-=-=--==-=-=-=FRONTEND--==-=-=-=--==-=-=-=--==-=-=-=--==-=-=-=--=
