--- a/backend/datahub/Dockerfile
+++ b/backend/datahub/Dockerfile
@@ -7,13 +7,14 @@ WORKDIR /app
 
 COPY package.json package-lock.json ./
 
+COPY .env ./
 
 RUN npm install --omit=dev
-
 
 COPY . .
 
 RUN chmod +x entrypoint.sh
+
 
 EXPOSE 3001
 
