--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "migrate": "node scripts/migrate.js"
+        "migrate": "node ../../scripts/migrate.js"
     },
     "keywords": [],
     "author": "",
