--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,6 @@ services:
         build:
             dockerfile: Dockerfile
             context: ./backend/datahub
-        entrypoint: ./entrypoint.sh
         env_file:
             - .env
         container_name: bee-fleet-service
@@ -69,6 +68,7 @@ services:
                 condition: service_healthy
         networks:
             - bee-fleet-network
+        command: sh -c "npx prisma migrate dev && node server.js"
 
 networks:
     bee-fleet-network:
