--- a/backend/datahub/Dockerfile
+++ b/backend/datahub/Dockerfile
@@ -10,7 +10,7 @@ COPY package.json package-lock.json ./
 COPY .env ./
 
 RUN npm install --omit=dev
-
+RUN npm rebuild bcrypt --build-from-source
 COPY . .
 
 
@@ -19,3 +19,4 @@ EXPOSE 3001
 
 
 CMD ["node", "server.js"]
+
