--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "@heroicons/react": "^2.2.0",
       "@tailwindcss/postcss": "^4.0.14",
+      "cors": "^2.8.5",
       "next": "15.2.3",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
