--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -1,10 +1,10 @@
 {
     "name": "datahub",
     "version": "1.0.0",
-    "main": "server.js",
+    "main": "server.ts",
     "type": "module",
     "scripts": {
-        "dev": "node server.js",
+        "dev": "tsx watch server.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
         "migrate": "node ../../scripts/migrate.js"
     },
@@ -15,8 +15,25 @@
     "dependencies": {
         "@prisma/client": "^6.5.0",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "ts-node-dev": "^2.0.0",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.16.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^22.10.1",
+        "eslint": "^9.16.0",
+        "globals": "^15.13.0",
+        "prisma": "^6.0.1",
+        "typescript-eslint": "^8.17.0"
     }
 }
