--- a/backend/bot/pyproject.toml
+++ b/backend/bot/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.11",
+    "gunicorn>=23.0.0",
     "ruff>=0.11.0",
     "uvicorn>=0.34.0",
 ]
