--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -14,11 +14,13 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.5.0",
+        "@types/multer": "^1.4.12",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.2",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2"
