--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@prisma/client": "^6.5.0",
         "@types/multer": "^1.4.12",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
