--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -24,7 +24,8 @@
         "multer": "^1.4.5-lts.2",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.16.0",
