--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -22,6 +22,8 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
@@ -35,6 +37,7 @@
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.10.1",
+        "@types/swagger-ui-express": "^4.1.8",
         "eslint": "^9.16.0",
         "globals": "^15.13.0",
         "prisma": "^6.0.1",
