--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
       "@heroicons/react": "^2.2.0",
       "@tailwindcss/postcss": "^4.0.14",
       "cors": "^2.8.5",
+      "framer-motion": "^12.7.4",
       "next": "15.2.3",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "tailwindcss": "^4.0.14"
+      "react-toastify": "^11.0.5",
+      "tailwindcss": "^4.0.14",
+      "uuid": "^11.1.0"
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3",
