--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,16 @@
    "version": "0.1.0",
    "private": true,
    "scripts": {
-      "dev": "next dev",
+      "dev": "next dev -p 5006",
       "build": "next build",
-      "start": "next start",
+      "start": "next start -p 5006",
       "lint": "next lint"
    },
    "dependencies": {
       "@heroicons/react": "^2.2.0",
       "@tailwindcss/postcss": "^4.0.14",
       "cors": "^2.8.5",
+      "date-fns": "^4.1.0",
       "framer-motion": "^12.7.4",
       "next": "15.2.3",
       "react": "^19.0.0",
