--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
             context: ./backend/datahub
         env_file:
             - .env
-        container_name: bee-fleet-service
+        container_name: bee-fleet-datahub
         restart: always
         environment:
             DB_HOST: mysql
@@ -72,7 +72,7 @@ services:
                 condition: service_healthy
         networks:
             - project_network
-        command: sh -c "npx prisma generate && npx prisma migrate deploy && npm run dev"
+        command: sh -c "npx prisma migrate deploy && npm run dev"
 
 
     backend-bee-fleet-bot:
@@ -101,23 +101,26 @@ services:
             - project_network
         restart: always
 
-    # bee_fleet_frontend:
-    #     build:
-    #         context: ./frontend
-    #         dockerfile: Dockerfile
-    #     restart: always
-    #     ports:
-    #         - "5006:5006"
-    #     env_file:
-    #         - .env
-    #     depends_on:
-    #         - bee-fleet-datahub
-    #     networks:
-    #         - project_network
+    bee_fleet_frontend:
+        container_name: bee-fleet-frontend
+        build:
+            context: ./frontend
+            dockerfile: Dockerfile
+        environment:
+            - NEXT_PUBLIC_API_URL=http://bee-fleet-datahub:5004
+            - NEXT_PUBLIC_CLIENT_API_URL=http://localhost:5004
+        restart: always
+        ports:
+            - "5006:5006"
+        env_file:
+            - .env
+        depends_on:
+            - bee-fleet-datahub
+        networks:
+            - project_network
 
 networks:
   project_network:
-    external: true
 
 volumes:
     mysql_data:
