--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,7 @@ services:
             dockerfile: Dockerfile
         environment:
             - NEXT_PUBLIC_API_URL=http://bee-fleet-datahub:5004
+            - NEXT_PUBLIC_CLIENT_API_URL=http://localhost:5004
         restart: always
         ports:
             - "5006:5006"
@@ -120,7 +121,6 @@ services:
 
 networks:
   project_network:
-    external: true
 
 volumes:
     mysql_data:
