--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
                 condition: service_healthy
         networks:
             - project_network
-        command: sh -c "npx prisma migrate deploy && npm run dev"
+        command: sh -c "npx prisma generate && npx prisma migrate deploy && npm run dev"
 
 
     backend-bee-fleet-bot:
