--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,7 @@ services:
         networks:
             - project_network
         healthcheck:
-            test:
-                [
-                    "CMD",
-                    "mysqladmin",
-                    "ping",
-                    "-h",
-                    "localhost",
-                    "-u",
-                    "root",
-                    "-p$$MYSQL_ROOT_PASSWORD",
-                ]
+            test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD" ]
             interval: 5s
             timeout: 5s
             retries: 20
@@ -74,7 +64,6 @@ services:
             - project_network
         command: sh -c "npx prisma generate && npx prisma migrate deploy && npm run dev"
 
-
     backend-bee-fleet-bot:
         build:
             context: ./backend/bot
@@ -119,10 +108,10 @@ services:
         networks:
             - project_network
 
-networks:
-  project_network:
-
 volumes:
     mysql_data:
         name: bee_fleet_mysql_data
 
+networks:
+    project_network:
+        external: true
