--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,8 +94,8 @@ services:
             context: ./frontend
             dockerfile: Dockerfile
         environment:
-            - NEXT_PUBLIC_API_URL=https://hublast.com/bee-fleet-datahub/api
-            - NEXT_PUBLIC_CLIENT_API_URL=https://hublast.com/bee-fleet-datahub/api
+            - NEXT_PUBLIC_API_URL=https://hublast.com/bee-fleet-datahub
+            - NEXT_PUBLIC_CLIENT_API_URL=https://hublast.com/bee-fleet-datahub
         restart: always
         ports:
             - "5006:5006"
