--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
       "@tailwindcss/postcss": "^4.0.14",
       "cors": "^2.8.5",
       "date-fns": "^4.1.0",
+      "exceljs": "^4.4.0",
+      "file-saver": "^2.0.5",
       "framer-motion": "^12.7.4",
       "next": "15.2.3",
       "react": "^19.0.0",
