--- a/backend/bot/Dockerfile
+++ b/backend/bot/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM python:3.13-slim
 
 WORKDIR /app
 
@@ -9,4 +9,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 EXPOSE 5005
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5005", "--app-dir", "backend/bot"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5005", "--app-dir", "backend/bot", "--reload"]
