--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
       "next": "15.2.3",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
+      "react-to-print": "^3.1.0",
       "react-toastify": "^11.0.5",
       "recharts": "^2.15.3",
       "tailwindcss": "^4.0.14",
