--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,17 @@ services:
         networks:
             - project_network
         healthcheck:
-            test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD" ]
+            test:
+                [
+                    "CMD",
+                    "mysqladmin",
+                    "ping",
+                    "-h",
+                    "localhost",
+                    "-u",
+                    "root",
+                    "-p$$MYSQL_ROOT_PASSWORD",
+                ]
             interval: 5s
             timeout: 5s
             retries: 20
@@ -54,6 +64,8 @@ services:
             DB_USER: ${MYSQL_USER}
             DB_PASSWORD: ${MYSQL_PASSWORD}
             DB_NAME: ${MYSQL_DATABASE}
+            TZ: America/Sao_Paulo
+
         ports:
             - "5004:5004"
         volumes:
