--- a/backend/datahub/package.json
+++ b/backend/datahub/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@faker-js/faker": "^8.4.1",
         "@prisma/client": "^6.5.0",
         "@types/multer": "^1.4.12",
         "bcryptjs": "^3.0.2",
@@ -22,6 +23,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.2",
+        "node-cron": "^3.0.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "ts-node-dev": "^2.0.0",
@@ -37,6 +39,7 @@
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.10.1",
+        "@types/node-cron": "^3.0.11",
         "@types/swagger-ui-express": "^4.1.8",
         "eslint": "^9.16.0",
         "globals": "^15.13.0",
