--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
             - "5005:5005"
         volumes:
             - .:/app
+            - ./logs:/app/logs
         env_file:
             - .env
         environment:
